--- a/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
+++ b/src/themes/collspec/app/vedette/vedette-liste/vedette-liste.component.scss
@@ -166,6 +166,24 @@ p {
 
 @media (max-width: 768px) {
 
+  .slider {
+    &__section {
+      margin-left: 0!important;
+    }
+    &__slide {
+      flex: 0 0 calc(100% / 1);
+      margin-left: 0;
+
+      img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        display: block;
+        transition: transform 0.3s ease;
+      }
+    }
+  }
+
   .hero-section h1, .hero-section .h1 {
     font-size: 42px;
     margin-top: 70%;
@@ -176,6 +194,8 @@ p {
   .carousel-bib-home {
     padding: 0 0.5rem;
   }
+
+
 
   .bib-title {
     margin-top: 1.5rem;
